--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -22,3 +22,11 @@ img{
   margin-left: 20px;
   position: relative;
 }
+
+.dropdown ul{
+  box-shadow: 1px 2px 4px;
+  padding: 15px;
+  width: 180px;
+  height: 160px;
+
+}
