--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -132,7 +132,12 @@
       <div class="row d-flex justify-content-center">
           <div class="col-8 col-sm-4 d-flex justify-content-center align-items-center">
             <div class="card rounded shadow-lg p-2"
-                style="width: 38rem;">
+                style="width: 36rem; height: 49rem;">
+                
+                <div class="col-md-12 p-2">
+                  <label class="form-control bg-primary text-white">Ficha de datos del usuario</label>
+                </div>
+
               <img src="../../../assets/images/iconRunners.png" class="card-img-top " alt="...">
               <div class="card-body">
                 <h5 class="card-title">Bienvenido:</h5>
