--- a/src/app/components/login-card/login-card.component.html
+++ b/src/app/components/login-card/login-card.component.html
@@ -82,7 +82,7 @@
     </form>
     <div class="row position-relative">
       <div class="col-md-12 mt-2">
-        <button class="btn btn-primary m-2 col-md-6"
+        <button class="btn btn-primary ms-2 mb-2 col-md-6"
                *ngIf="!this.valideLogin.valid"
                 (click)="goToRegister()"
                 data-bs-toggle="tooltip" 
